[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "android-bootimg",
    "android-bootimg-cli"
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.100"
paste = "1.0.15"
num-traits = "0.2.19"
memmap2 = "0.9.9"

bzip2 = "0.6.1"
zopfli = "0.8.3"
lz4 = "1.28.1"
lzma-rust2 = { version = "0.15.4" }
flate2 = { version = "1.1.5" }
bytemuck = "1.24.0"
android-bootimg = { path = "android-bootimg" }

